Revision history for Dist-Build

{{$NEXT}}

0.017     2025-03-11 21:53:17+01:00 Europe/Brussels
          - Don't expose Dist::Build::Core to main planner
          - Document core delegates and known plugins

0.016     2024-10-06 18:04:02+02:00 Europe/Brussels
          - Add Dist::Build::DynamicPrereqs
          - Rename main_module_name to main_module
          - Add default module to module_sharedir in Dist::Build::ShareDir
          - Rename the dist_name delegate to distribution

0.015     2024-09-20 14:07:03+02:00 Europe/Brussels
          - Add Dist::Build::XS::Alien
          - Add support for exporting compilation flags.
          - Fix various issues in dump functions.

0.014     2024-09-13 11:25:35+02:00 Europe/Brussels
          - Add Dist::Build::XS::WriteConstants

0.013     2024-09-03 18:30:13+02:00 Europe/Brussels
          - Add a base argument to lib_files
          - Make extension for manpages overridable

0.012     2024-08-31 21:05:21+02:00 Europe/Brussels
          - Shorten module_name and module_version arguments in add_xs
          - Add support for exporting and importing headers
          - Pass on config in Dist::Build::XS

0.011     2024-08-11 23:19:50+02:00 Europe/Brussels
          - Let get_config modify build stage arguments
          - Add main_module_name helper

0.010     2024-08-04 00:41:56+02:00 Europe/Brussels
          - Add missing prereqs due to misconfigured dist.ini

0.009     2024-08-01 23:01:19+02:00 Europe/Brussels
          - Make path portable in build tests

0.008     2024-08-01 12:56:09+02:00 Europe/Brussels
          - Add compilation configurator
          - Only load Dist::Build::XS dependencies when necessary
          - Remove curdir and inc/ from automatic include paths in Dist::Build::XS
          - Allow file to be specified instead of module in Dist::Build::XS
          - Allow sources to be a hash in Dist::Build::XS
          - Extract script and lib logic out of base module